# rustflash

./: .gitignore  CDC_RustEtcher.md  CHANGELOG.md  Cargo.toml  DOCS.md  NOTICE.md  README.md
.github/workflows/: test.yml
_bmad/: config.toml  config.user.toml
_bmad-output/implementation-artifacts/: 1-1-initialize-cross-platform-device-support.md  1-2-implement-cross-platform-device-enumeration.md  implementation-readiness-report-2026-07-21.md  sprint-status.yaml
_bmad-output/implementation-artifacts/tests/: test-summary.md
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md
_bmad-output/test-artifacts/: atdd-checklist-1-1.md  atdd-checklist-1-2.md  automation-summary.md  e2e-trace-summary.json  gate-decision.json  nfr-assessment.md  test-architecture-completion-report.md  test-review.md  traceability-matrix.md
_bmad-output/test-artifacts/test-design/: rustflash-handoff.md  test-design-architecture.md  test-design-qa.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmad-loop/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
benches/: io_bench.rs
src/: lib.rs  main.rs
src/cli/: mod.rs
src/cli/commands/: backup.rs  clone.rs  flash.rs  list.rs  mod.rs  partition.rs  restore.rs
src/config/: mod.rs  settings.rs
src/core/: backup.rs  cloner.rs  flasher.rs  mod.rs  partition.rs  verify.rs
src/device/: detect.rs  filter.rs  mod.rs  mount.rs
src/io/: block.rs  decompress.rs  download.rs  mod.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/tui/: app.rs  event.rs  mod.rs  theme.rs
src/tui/ui/: backup.rs  clone.rs  dialog.rs  file_browser.rs  flash.rs  home.rs  mod.rs  partition.rs  progress.rs  settings.rs
tests/: README.md  backup_test.rs  cli_test.rs  clone_test.rs  e2e_workflows.rs  flash_test.rs  partition_test.rs
