[package]
name = "rustflash"
version = "0.1.0"
edition = "2024"
description = "A fast, cross-platform tool for flashing OS images, cloning disks, managing backups and partitions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TODO/rustflash"
keywords = ["flash", "usb", "disk", "etcher", "image"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["stream"] }

# Compression
flate2 = "1"
xz2 = "0.1"
zstd = "0.13"
bzip2 = "0.5"
zip = "2"

# Hashing / integrity
sha2 = "0.10"
md-5 = "0.10"
blake3 = "1"
crc32fast = "1"
hex = "0.4"

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# System info
sysinfo = "0.33"

# Partition tables
gpt = "3"

# Misc
bytesize = "1"
indicatif = "0.17"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"

[target.'cfg(target_os = "linux")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Devices_DeviceAndDriverInstallation",
] }

[target.'cfg(target_os = "macos")'.dependencies]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "io_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
